--- a/update.html
+++ b/update.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="img/icon.png">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/import.css">
-    <link rel="stylesheet" href="../blog/fontawesome-free-5.15.2-web copy/css/all.css">
+    <link rel="stylesheet" href="./fontawesome-free-5.15.2-web copy/css/all.css">
     <style>
         .test{
             display: flex;
