--- a/project.html
+++ b/project.html
@@ -97,7 +97,7 @@
                 <img src="./img/project5.PNG" alt="my project">
             </div>
             <div class="project-info margin-t-3 margin-b-3">
-                This is a personal search shortcut 
+                This is a personal search shortcut,which contains all the commulication tools .
             </div>
             <div class="project-access">
                 <div class="btn btn-1">
