--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     </header>
     <div class="container margin-t-12 box-wrapper">
-        <ul class="box">
+        <ul class="box margin-b-5">
             <li></li>
             <li></li>
             <li></li>
